commiting alll the files

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         A simple dark alert—check it out!
       </div>
 
+      <a href="#" class="btn btn-primary">Click me</a>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
